[gd_scene load_steps=11 format=3 uid="uid://dy2q8wpvfd8kp"]

[ext_resource type="Script" uid="uid://c62waq2rtpr5n" path="res://scripts/tutorial_scene.gd" id="1_tr4y6"]
[ext_resource type="FontFile" uid="uid://ck0hm2v3474rj" path="res://fonts/boldpixels/BoldPixels.ttf" id="2_jelwi"]
[ext_resource type="Texture2D" uid="uid://bcaluqy2k5me0" path="res://assets/tutorial/CardTut1.PNG" id="3_k7w8g"]
[ext_resource type="FontFile" uid="uid://j3u6vwrixpc0" path="res://fonts/boldpixels/BoldPixels.otf" id="3_urufc"]
[ext_resource type="Texture2D" uid="uid://q2msjtglxne" path="res://assets/tutorial/CardTut2.PNG" id="4_ki3mu"]
[ext_resource type="Texture2D" uid="uid://cvta87mbjl24d" path="res://assets/tutorial/EndTurnTut.PNG" id="5_0vn6l"]
[ext_resource type="Texture2D" uid="uid://r023377wf3py" path="res://assets/tutorial/EnemyTurnTut.PNG" id="6_ki3mu"]
[ext_resource type="AudioStream" uid="uid://bfaxysfie3laa" path="res://sounds/ui/ui_main_button_back.wav" id="8_4yomp"]
[ext_resource type="AudioStream" uid="uid://crybf20vh4vmv" path="res://sounds/ui/ui_main_button_select.wav" id="9_8ox5i"]
[ext_resource type="AudioStream" uid="uid://hribpwcyk1y4" path="res://sounds/ui/ui_main_button_climb.wav" id="10_u6jee"]

[node name="TutorialScene" type="CanvasLayer"]
script = ExtResource("1_tr4y6")

[node name="TutorialContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.0
offset_top = -320.0
offset_right = 88.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.706, 1.6)

[node name="CardTip" type="Control" parent="TutorialContainer"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="TutorialContainer/CardTip"]
layout_mode = 0
offset_right = 620.0
offset_bottom = 400.0
color = Color(0.414497, 0.589938, 1, 1)

[node name="Title" type="Label" parent="TutorialContainer/CardTip"]
layout_mode = 1
offset_left = 225.0
offset_right = 389.0
offset_bottom = 34.0
theme_override_fonts/font = ExtResource("2_jelwi")
theme_override_font_sizes/font_size = 32
text = "Using Cards"

[node name="Image" type="TextureRect" parent="TutorialContainer/CardTip"]
layout_mode = 0
offset_left = 45.0
offset_top = 150.0
offset_right = 622.0
offset_bottom = 414.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_k7w8g")

[node name="Image2" type="TextureRect" parent="TutorialContainer/CardTip"]
layout_mode = 0
offset_left = 400.0
offset_top = 160.0
offset_right = 661.0
offset_bottom = 399.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_ki3mu")

[node name="Description" type="Label" parent="TutorialContainer/CardTip"]
layout_mode = 0
offset_left = 10.0
offset_top = 50.0
offset_right = 601.0
offset_bottom = 73.0
theme_override_fonts/font = ExtResource("2_jelwi")
theme_override_font_sizes/font_size = 17
text = "Click on a card in your hand, then click on an enemy to use it against them "

[node name="EndTurnTip" type="Control" parent="TutorialContainer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="TutorialContainer/EndTurnTip"]
layout_mode = 0
offset_right = 620.0
offset_bottom = 400.0
color = Color(0.673846, 0.483567, 1, 1)

[node name="Title" type="Label" parent="TutorialContainer/EndTurnTip"]
layout_mode = 0
offset_left = 186.0
offset_right = 426.0
offset_bottom = 34.0
theme_override_fonts/font = ExtResource("2_jelwi")
theme_override_font_sizes/font_size = 32
text = "Ending Your Turn"

[node name="Image" type="TextureRect" parent="TutorialContainer/EndTurnTip"]
layout_mode = 0
offset_left = 200.0
offset_top = 180.0
offset_right = 383.0
offset_bottom = 286.0
texture = ExtResource("5_0vn6l")

[node name="Description" type="Label" parent="TutorialContainer/EndTurnTip"]
layout_mode = 1
offset_left = 50.0
offset_top = 60.0
offset_right = 527.0
offset_bottom = 99.0
theme_override_fonts/font = ExtResource("2_jelwi")
theme_override_font_sizes/font_size = 17
text = "Press the End Turn button when you finish playing your cards. 
This allows the enemy take their turn."

[node name="EnemyAttackTip" type="Control" parent="TutorialContainer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="TutorialContainer/EnemyAttackTip"]
layout_mode = 0
offset_right = 620.0
offset_bottom = 400.0
color = Color(6.73831e-07, 0.723121, 0.445623, 1)

[node name="Title" type="Label" parent="TutorialContainer/EnemyAttackTip"]
layout_mode = 0
offset_left = 202.0
offset_right = 398.0
offset_bottom = 34.0
theme_override_fonts/font = ExtResource("2_jelwi")
theme_override_font_sizes/font_size = 32
text = "Enemy Attacks"

[node name="Image" type="TextureRect" parent="TutorialContainer/EnemyAttackTip"]
layout_mode = 0
offset_left = 200.0
offset_top = 125.0
offset_right = 598.0
offset_bottom = 465.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_ki3mu")

[node name="Description" type="Label" parent="TutorialContainer/EnemyAttackTip"]
layout_mode = 0
offset_left = 7.0
offset_top = 60.0
offset_right = 592.0
offset_bottom = 99.0
theme_override_fonts/font = ExtResource("2_jelwi")
theme_override_font_sizes/font_size = 17
text = "After your turn ends, the enemies will attack you. Check your health and heal
when needed."

[node name="ControllerTip" type="Control" parent="TutorialContainer"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="TutorialContainer/ControllerTip"]
offset_right = 620.0
offset_bottom = 400.0
color = Color(0.96812, 0.383266, 0.456924, 1)

[node name="Title" type="Label" parent="TutorialContainer/ControllerTip"]
offset_left = 180.0
offset_right = 428.0
offset_bottom = 32.0
theme_override_fonts/font = ExtResource("2_jelwi")
theme_override_font_sizes/font_size = 32
text = "Controller Inputs"

[node name="Image" type="TextureRect" parent="TutorialContainer/ControllerTip"]
offset_left = 200.0
offset_top = 125.0
offset_right = 598.0
offset_bottom = 465.0
scale = Vector2(0.5, 0.5)

[node name="PrevButton" type="Button" parent="TutorialContainer"]
layout_mode = 0
offset_left = 25.0
offset_top = 350.0
offset_right = 100.0
offset_bottom = 381.0
theme_override_fonts/font = ExtResource("3_urufc")
text = "Previous Tip"

[node name="NextButton" type="Button" parent="TutorialContainer"]
layout_mode = 0
offset_left = 500.0
offset_top = 350.0
offset_right = 573.0
offset_bottom = 381.0
theme_override_fonts/font = ExtResource("3_urufc")
text = "Next Tip"

[node name="StartGameButton" type="Button" parent="TutorialContainer"]
layout_mode = 0
offset_left = 485.0
offset_top = 350.0
offset_right = 585.0
offset_bottom = 381.0
theme_override_fonts/font = ExtResource("3_urufc")
text = "Start Game!"

[node name="Audio" type="Node2D" parent="."]

[node name="PrevButtonSound" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("8_4yomp")

[node name="NextButtonSound" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("9_8ox5i")

[node name="StartButtonSound" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("10_u6jee")
